# To-Do-Evolution-Platform

./: .coverage  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.claude/: settings.local.json
.spec-kit/: config.yaml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: CLAUDE.md  auth.py  database.py  main.py  models.py  pyproject.toml  schema.py
backend/middleware/: auth.py
backend/routes/: auth.py  tasks.py
backend/services/: task_service.py  user_service.py
backend/tests/: test_api.py  test_auth.py  test_tasks.py
frontend/: CLAUDE.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/tasks/: page.tsx
frontend/components/: LoginForm.tsx  ProtectedRoute.tsx  RegistrationForm.tsx  TaskDetail.tsx  TaskForm.tsx  TaskList.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useCreateTask.ts  useTasks.ts
frontend/lib/: api.ts  auth.ts  validation.ts
history/adr/: 001-in-memory-storage.md  001-jwt-authentication.md  002-cli-framework.md  003-data-validation.md  004-task-identification.md  005-monorepo-structure.md  006-better-auth.md  007-jwt-storage.md  008-sqlmodel-orm.md  009-user-id-in-path.md  010-neon-postgresql.md  011-spec-kit-plus-structure.md
history/prompts/001-todo-app-arch-evolution/: 001-create-todo-app-spec.spec.prompt.md  002-clarify-todo-app-spec.spec.prompt.md  003-create-impl-plan.plan.prompt.md  004-create-tasks.tasks.prompt.md
history/prompts/002-web-app-auth/: 002-phase-ii-full-stack-web-app-auth.spec.prompt.md  003-phase-ii-full-stack-web-app-auth.plan.prompt.md  004-phase-ii-full-stack-web-app-auth.tasks.prompt.md  005-phase-ii-arch-decisions.adr.prompt.md
history/prompts/constitution/: 001-update-constitution.constitution.prompt.md
history/prompts/general/: 1-todo-evolution-implementation.general.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/contracts/: config-contract.md
specs/001-todo-app-arch-evolution/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app-arch-evolution/checklists/: requirements.md
specs/002-web-app-auth/: API.md  DEPLOYMENT.md  TROUBLESHOOTING.md  architecture.md  data-model.md  overview.md  plan.md  quickstart.md  quickstart_guide.md  research.md  spec.md  tasks.md
specs/002-web-app-auth/api/: mcp-tools.md  rest-endpoints.md
specs/002-web-app-auth/checklists/: requirements.md
specs/002-web-app-auth/contracts/: rest-api-contract.md
specs/002-web-app-auth/database/: schema.md
specs/002-web-app-auth/features/: authentication.md  chatbot.md  task-crud.md
specs/002-web-app-auth/ui/: components.md  pages.md
src/cli/: main.py
src/models/: storage.py  todo.py  user.py
src/services/: todo_service.py  validation_service.py
src/todo_evolution_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/integration/cli/: test_cli.py  test_cli_comprehensive.py
tests/unit/cli/: test_cli_functions.py  test_main.py  test_main_comprehensive.py  test_main_simple.py
tests/unit/models/: test_storage.py  test_todo.py  test_user.py
(+2 files in other folders)
