[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-evolution-platform"
version = "0.1.0"
description = "Multi-Phase Todo Application - Console to Cloud"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Todo Evolution Team"},
]
dependencies = [
    "rich>=13.7.1",
    "pydantic>=2.6.4",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "mypy>=1.9.0",
    "black>=24.4.2",
    "flake8>=7.0.0",
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.16",
    "openai>=1.16.2",
    "langchain>=0.1.17",
    "langchain-openai>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "black",
    "flake8",
]

[project.scripts]
todo-cli = "src.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']
exclude = ['.venv', 'build', 'dist', '__pycache__']
max-complexity = 10