[project]
name = "todo-web-app-backend"
version = "0.1.0"
description = "Backend for the Todo Web Application with Authentication"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "sqlmodel>=0.0.8",
    "uvicorn>=0.24.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.1",
    "httpx>=0.25.2",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0"
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "flake8>=6.0.0",
    "mypy>=1.5.1",
    "isort>=5.12.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[project.scripts]
todo-backend = "backend.main:main"